# morphis

./: .dockerignore  AGENTS.md  BENCHMARK.md  Cargo.toml  Dockerfile  PGX_OPTIMIZATION_ISSUES.md  README.md  build-images.sh  config.docker.yaml  config.yaml  docker-compose.yml  opencode.json  seed_es.sh  session-ses_0f35.md
.github/workflows/: docker-publish.yml
.opencode/agents/: check-integration-chain.md
.opencode/skills/test-suite/: SKILL.md
auth-proxy/: Cargo.toml  Dockerfile  config.docker.yaml  config.yaml
auth-proxy/src/: config.rs  main.rs
auth-proxy/tests/: run_tests.py  test_config.yaml  test_config_noauth.yaml
benchmark/: benchmark.py  generate_data.sql  run.sh
db/: init.sql  seed.sql  triggers.sql
frontend/: .dockerignore  AGENTS.md  Dockerfile  PLAN.md  auth.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/[entity]/: page.tsx
frontend/components/: advanced-filter.tsx  breadcrumbs.tsx  card.tsx  confirm-dialog.tsx  dynamic-form.tsx  dynamic-table.tsx  empty-state.tsx  icon.tsx  locale-provider.tsx  modal.tsx  nav-bar.tsx  relation-filter.tsx  relation-panel.tsx  search-bar.tsx  search-filter.tsx  skeleton.tsx  status-badge.tsx  theme-provider.tsx  theme-toggle.tsx  toast.tsx
frontend/config/: entity-metadata.json
frontend/lib/: client.tsx  i18n.ts  metadata.ts  query-builder.ts  schema.ts  types.ts
frontend/messages/: en.json  zh-TW.json
frontend/scripts/: seed-auth-chain.sh
frontend/tests/: auth-chain.spec.ts  crud.spec.ts  entities.spec.ts
keycloak/: realm.json
pgx/: config.toml
pgx/queries/: material.graphql
pgx/schema/: types.graphql
scripts/: .env.frontend  common.sh  integration-check.sh  keycloak-setup.py  run-all.sh  run-frontend-tests.sh
skills/morphis-config/: SKILL.md
src/: circuit_breaker.rs  config.rs  db.rs  main.rs  mcp.rs  query.rs  schema.rs
src/schema/: db.rs  input.rs  mod.rs  mutation.rs  query.rs  search.rs  table.rs  util.rs
tests/: Dockerfile  auth_proxy.hurl  docker-entrypoint.sh  health.hurl  mcp.hurl  mutations.hurl  queries.hurl  relations.hurl  row_filters.hurl  run_tests.sh  search.hurl
(+9 files in other folders)
