[package]
name = "morphis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
schemars = "0.8"
tower-http = { version = "0.6.11", features = ["cors"] }
serde_json = "1.0.150"
