[package]
name = "morphis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full", "test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
schemars = { version = "1", features = ["derive"] }
tower-http = { version = "0.6.11", features = ["cors"] }
serde_json = "1.0.150"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
rmcp = { version = "1.8", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
base64 = "0.22"

[workspace]
members = ["auth-proxy"]
